--- a/src/MyComponents/Todos.css
+++ b/src/MyComponents/Todos.css
@@ -2,4 +2,5 @@
     text-align: center;
     margin: auto;
     align-items: center;
+    min-height: 509.3px;
 }
